crux-mir/test/symb_eval/concretize/assert.good
test assert/<DISAMB>::crux_test[0]: returned 1, FAILED

failures:

---- assert/<DISAMB>::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:45:13: 52:14 !test/symb_eval/concretize/assert.rs:10:5: 10:81: error: in assert/<DISAMB>::crux_test[0]
[Crux]   MIR assertion at test/symb_eval/concretize/assert.rs:10:5:
[Crux]   	100 + 157 == 1

[Crux] Overall status: Invalid.
